<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setAsSheet"
    android:layout_width="match_parent"
    android:layout_height="330dp"
    android:layout_centerInParent="true"
    android:layout_marginBottom="-20dp"
    android:background="@drawable/round_drawable_black">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="4dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/mini_blackscreen" />

    <TextView
        android:id="@+id/tx_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:letterSpacing="0.1"
        android:padding="@dimen/value_10"
        android:text="@string/set_as_dialog"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radio_group_wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_title"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="7dp">

        <RadioButton
            android:id="@+id/rd_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/set_home"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rd_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/set_lock"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rd_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/set_both"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rd_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/set_system"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/rl_apply_wall"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_below="@+id/radio_group_wall"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/all_btn_bg"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:letterSpacing=".05"
            android:text="@string/apply"
            android:textColor="@color/black"
            android:textSize="26sp" />
    </RelativeLayout>
</RelativeLayout>

